--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   text-align: center;
   line-height: 150%;
   font-family: "Roboto", sans-serif;
+  display: flex;
 }
 #project-section {
   display: flex;
