--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,25 @@ body {
     display: none;
   }
 }
+#navbar {
+  /* use a gradient on the navbar */
+  background-color: #000000;
+  background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+  color: white;
+  -webkit-transition: background-color 1000ms linear;
+  -moz-transition: background-color 1000ms linear;
+  -o-transition: background-color 1000ms linear;
+  -ms-transition: background-color 1000ms linear;
+  transition: background-color 1000ms linear;
+}
+#navbar > * {
+  color: white;
+}
+/* .toggle-btn:hover {
+  transform: scale(1.15);
+} */
+img:hover {
+  transform: scale(1.15);
+  margin-left: 6rem;
+  z-index: 1;
+}
