removed img scale on hover action

--- a/src/App.css
+++ b/src/App.css
@@ -65,8 +65,8 @@ body {
 /* .toggle-btn:hover {
   transform: scale(1.15);
 } */
-img:hover {
+/* img:hover {
   transform: scale(1.15);
   margin-left: 6rem;
   z-index: 1;
-}
+} */
